updated code to support individual openid params

--- a/test-conf/nginx.conf
+++ b/test-conf/nginx.conf
@@ -20,18 +20,20 @@ http {
 
     keepalive_timeout  65;
 
-	OPENIDC_HomeDir			 /opt/nginx-1.8.0/conf;
+	# need to provide full path of home-directory where oidc-config.xml would reside
+	OPENIDC_HomeDir			 /usr/local/nginx/conf;
 	OPENIDC_LogFile   			 config-refresh.log;
 	OPENIDC_SharedMemory file=/configcore1.shm size=62000;
-	OPENIDC_PassPhrase dowjones123;
+	OPENIDC_PassPhrase secret123;
 	OPENIDC_ConfigFile   		 oidc-config.xml;
 
     server {
         listen 80;
 		
+		# do not change this location, this is internal path to map to IdP token endpoint 
 	    location /internal/oauth2/token {
 	    	internal;
-	        proxy_pass https://www.googleapis.com/oauth2/v4/token;
+	        proxy_pass https://www.googleapis.com/oauth2/v4/token; # change it to IdP token endpoint
 	    }
 
     }
